# tink-tcl

./: CMakeLists.txt  pkgIndex.tcl.in  readme.md  tink-cc-2.0.0.diff  tink-cc-2.1.1.diff
cmake/: FindTCL.cmake
examples/: example-aead.tcl  example-daead.tcl  example-hybrid.tcl  example-jwt.tcl  example-mac.tcl  example-signature.tcl  example.tcl  sample-encrypted-keyset.txt
src/: library.cc  library.h
src/awskms/: aws_kms_aead.cc  aws_kms_client.cc  aws_kms_client.h
